--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.4.4",
     "apollo-server-express": "^2.25.2",
     "if-env": "^1.0.4"
   },
